--- a/templates/rohan.html
+++ b/templates/rohan.html
@@ -16,6 +16,7 @@
         }
     }
 </script>
+<body style="background-color:orangered; height: fit-content">
     <h1 style="text-align: center">
         Rohan Gaikwad Home Page
     </h1>
@@ -37,7 +38,7 @@
     </div>
 <style>
     table, td, th {
-        border: 10px solid white;
+        border: 10px solid black;
         padding: 50px;
     }
     td, th {
@@ -53,7 +54,7 @@
 
 <div class="-block" style="margin: 2% 25% 5%; font-family: gilroy,serif;">
     <div class="col-12" style="text-align: center;">
-        <h2>All NBA Players</h2>
+        <h2 style="color: black"><strong>NBA Players</strong></h2>
     </div>
 
     {% set players = data.data%}
