--- a/templates/linda.html
+++ b/templates/linda.html
@@ -56,6 +56,7 @@
                 <a href="https://docs.google.com/document/d/1sZS-mU7SGq6S9c94T5OciGrEQYjoQMeJLd6lv3WhqoY/edit?usp=sharing">Individual Journal</a>
                 <a href="https://docs.google.com/document/d/1Fgip2Fr26XOBEdhVSpi1QiwjZowhopY57o4UpwbYZzo/edit?usp=sharing">StudyOwl Brainwrite</a>
                 <a href="https://docs.google.com/document/d/1OkAMgzNODur6Gtonz_EuvoDeVXUnaMvdthtZnsBjXwU/edit">TPT 0.0 Create Task</a>
+                <a href="https://github.com/samayass/flask_portfolio/blob/main/README.md">Pop Quiz(Readme)</a>
             </p>
 
 
