added weather page

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -16,6 +16,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('divya') }}>Divya</a>
             <a class="nav-link" href={{ url_for('brian') }}>Brian</a>
             <a class="nav-link" href={{ url_for('photogallery') }}>Photography</a>
+            <a class="nav-link" href={{ url_for('weather') }}>Weather</a>
         </div>
     </div>
 </nav>
