--- a/templates/brian.html
+++ b/templates/brian.html
@@ -65,10 +65,10 @@
 
 <script>
     function MaskOnOff(){
-        if (document.getElementById("MaskOn").src=="http://127.0.0.1:5000/static/IMG_19F786F8D399-1.jpeg") {
-            document.getElementById("MaskOn").src = "../static/IMG_887CE03AB9F7-1.jpeg";
+        if (document.getElementById("MaskOn").src=="http://127.0.0.1:5000/static/brian_maskon.jpeg") {
+            document.getElementById("MaskOn").src = "../static/brian_maskoff.jpeg";
         }
-        else document.getElementById("MaskOn").src = "http://127.0.0.1:5000/static/IMG_19F786F8D399-1.jpeg"
+        else document.getElementById("MaskOn").src = "http://127.0.0.1:5000/static/brian_maskon.jpeg"
     }
 </script>
 
