--- a/templates/LucasAboutMe.html
+++ b/templates/LucasAboutMe.html
@@ -33,6 +33,26 @@
             <img src="/w3images/streetart3.jpg" style="width:100%">
             <img src="/w3images/streetart4.jpg" style="width:100%">
         </div>
+
+        <button id=sunflower onclick="lucas()">Mask Toggle</button>
+        <div>
+            <img id="mask" src="/static/assets/lucasmask.jpg" width="400" height="530">
+            <img id="nomask" src="/static/assets/lucasnomask.jpg" style="display: none;" width="400" height="530">
+        </div>
+        <script>
+            function lucas() {
+                let x = document.getElementById("mask");
+                let y = document.getElementById("nomask");
+                if (y.style.display === "block") {
+                    x.style.display = "block";
+                    y.style.display = "none";
+                } else {
+                    x.style.display = "none";
+                    y.style.display = "block";
+                }
+            }
+        </script>
+
     </div>
 
     <!-- End Page Content -->
