--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,8 @@
     #travelmainpic {
         padding-top: 120px;
         position: absolute;
-        left: 375px;
-        bottom: 7%;
+        left: 315px;
+        bottom: 4%;
     }
 
 
@@ -89,7 +89,7 @@
     p {
         position:fixed;
         width:100%;
-        bottom:30px;
+        top:60px;
         font-size:12px;
         color:#999;
         margin-top:200px;
@@ -147,6 +147,7 @@
 
     html, body {
         background-color: #D2B48C;
+        min-height:300%
     }
 
 
