Pranav Extend Layout About Page

--- a/templates/pranav.html
+++ b/templates/pranav.html
@@ -175,7 +175,7 @@
                 {% endfor %}
             </div>
 </div>
-
+        <p><a href="https://docs.google.com/document/d/1iU4SOdLDTyFTuoI4yuBxjvRjvVHq53I5JZgaCRP8Ah4/edit?usp=sharing">Pranav, Chase, and Colin Journal</a></p>
 
 
 </body>
