--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -23,7 +23,10 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         }
 
     </style>
+    {% block head %}
     <title>StudyOwl</title>
+    {% endblock %}
+
 </head>
 
 <body>
