--- a/templates/saathvika.html
+++ b/templates/saathvika.html
@@ -1,46 +1,47 @@
 {% extends "layouts/project.html" %}
-{% block body %}
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Saathvika</title>
-        <script src="https://genius.p.rapidapi.com/artists/16775/songs"></script>
-        <script>
-            function changeImage() {
+{% block head %}
+    <title>Saathvika</title>
+    <script>
+        function changeImage() {
 
-                if (document.getElementById("imgClickAndChange").src.includes('/static/assets/little.jpg'))
-                {
-                    document.getElementById("imgClickAndChange").src = "/static/assets/greyLittle.jpg";
-                }
-                else{
-                    document.getElementById("imgClickAndChange").src ="/static/assets/little.jpg"
-                }
+            if (document.getElementById("imgClickAndChange").src.includes('/static/assets/SAwithmask.jpg'))
+            {
+                document.getElementById("imgClickAndChange").src = "/static/assets/SAwithoutmask.jpg";
             }
+            else{
+                document.getElementById("imgClickAndChange").src ="/static/assets/SAwithmask.jpg"
+            }
+        }
 
-            function getLyric() {
-                fetch("https://genius.p.rapidapi.com/artists/16775/songs", {
-                    "method": "GET",
-                    "headers": {
-                        "x-rapidapi-host": "genius.p.rapidapi.com",
-                        "x-rapidapi-key": "SIGN-UP-FOR-KEY"
-                    }
+        function getLyric() {
+            fetch("https://hargrimm-wikihow-v1.p.rapidapi.com/steps?count=3", {
+	            "method": "GET",
+	            "headers": {
+		            "x-rapidapi-host": "hargrimm-wikihow-v1.p.rapidapi.com",
+                    "x-rapidapi-key": "60a050bd05msh74aa096ce4eab1cp1830c5jsn1612bc7b6d1f"
+	            }
+            })
+                .then(response => response.json())  // convert to json
+                .then(json => {
+                    console.log(json);    //print data to console
+                        document.getElementById("display-lyric1").innerText = json["1"];
+                        document.getElementById("display-lyric2").innerText = json["2"];
+                        document.getElementById("display-lyric3").innerText = json["3"];
                 })
-                    .then(response => {
-                        console.log(response);
-                    })
-                    .catch(err => {
-                        console.error(err);
-                    });
-            }
-        </script>
-    </head>
-    <body style="background-image: url('../static/assets/ghibli-9-960x519@2x.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
-    <div style="text-align:center; font-family: monospace; font-size: larger; width: 75%; margin: 2% auto 5%;" >
+
+                .catch(err => {
+                    console.error(err);
+                });
+        }
+    </script>
+{% endblock %}
+{% block body %}
+<div style="background-image: url('../static/assets/SAbg.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover">
+    <div style="text-align:center; font-family: monospace; font-size: larger; width: 65%; margin: 0 auto 5%;" >
         <div>
-            <h1 style="background-color: #3b4f3f; font-family: 'Blippo'; font-size: 65px; text-align: center; padding: 25px; color: papayawhip; text-shadow: 5px 3px black;">Saathvika Ajith's Individual Homepage</h1>
-            <p style="background-color: #3b4f3f; font-size: 20px; color: papayawhip; font-family: monospace">Hello there <span id="myName">{{name}}</span>, welcome to my individual homepage!</p>
-            <form style="padding: 5px; font-size: 17px; background-color: #3b4f3f; color: papayawhip; font-family: monospace" action="/saathvika/" id="saathvika2" method="POST" >
+            <h1 style="background-color: rgba(83,105,122, 0.8); font-family: 'Blippo'; font-size: 75px; text-align: center; padding: 20px; color: papayawhip; text-shadow: 5px 4px black;">Saathvika Ajith</h1>
+            <p style="background-color: rgba(83,105,122, 0.8); font-size: 24px; color: #99ba6d; font-family: monospace">Hello there <span id="myName">{{name}}friend</span>, welcome to my individual homepage!</p>
+            <form style="padding: 5px; font-size: 17px; background-color: rgba(83,105,122, 0.8); color: papayawhip; font-family: monospace" action="/saathvika/" id="saathvika2" method="POST" >
                 <label for="name">Enter Your Name!</label>
                 <input name="name" id="name">
                 <input type="submit" value="Go!" onclick="(function (){document.getElementById('myName').innerText=document.getElementById('name').value})();return false;">
@@ -48,21 +49,27 @@
         </div>
         <br>
         <div>
-            <p style="background-color: #3b4f3f; font-size: 17px; font-family: monospace; color: papayawhip">
+            <p style="background-color: rgba(83,105,122, 0.8); font-size: 20px; font-family: monospace; color: papayawhip">
                 <img src="/static/assets/little.jpg" style="height: 350px; width: auto;" id="imgClickAndChange" onclick="changeImage()" alt="change"/>
                 <br>
-                Click to ColorZap!
+                Click me!
             </p>
-            <p style="background-color: #3b4f3f; font-size: 20px; color: papayawhip; font-family: monospace">Trimester Work: </p>
+            <p style="background-color: rgba(83,105,122, 0.8); font-size: 20px; color: papayawhip; font-family: monospace">Trimester Work: <br>
+                <a style="color: #99ba6d" href="https://docs.google.com/document/d/1mfrMqXhbkRceC4fq3nXZMLD8jo5IjC2mwAsvpqjQX94/edit?usp=sharing">Daily Journal</a>
+                <br><a style="color: #99ba6d" href="https://docs.google.com/document/d/1OkAMgzNODur6Gtonz_EuvoDeVXUnaMvdthtZnsBjXwU/edit">Create Task Planning TPT Notes</a>
+                <br><a style="color: #99ba6d" href="https://docs.google.com/document/d/1OkAMgzNODur6Gtonz_EuvoDeVXUnaMvdthtZnsBjXwU/edit">StudyOwl BrainWrite</a>
+                <br><a style="color: #99ba6d" href="https://github.com/samayass/flask_portfolio#readme">ReadMe</a>
+            </p>
+            <div style="background-color: rgba(83,105,122, 0.8)">
+            <p style="font-size: 50px; padding-top: 15px; color: #99ba6d; font-family: Blippo">Out of Context WikiHow API:</p>
+            <button id="get-lyric" style="height: 35px; font-family: monospace; font-size: 15px; color: darkslateblue; background-color: papayawhip" onclick="getLyric()">Get me some Instructions!</button>
+            <div id="display-lyric1" style="margin-top: 25px; font-size: 30px; color: #99ba6d; font-weight: 600; font-family: monospace; text-align: center">No Text Yet</div>
+            <div id="display-lyric2" style="margin-top: 10px; font-size: 30px; color: #99ba6d; font-weight: 600; font-family: monospace; text-align: center">No Text Yet</div>
+            <div id="display-lyric3" style="margin-top: 10px; font-size: 30px; color: #99ba6d; font-weight: 600; font-family: monospace; text-align: center">No Text Yet</div>
+                <br>
+            </div>
+            </div>
+<br><br>
         </div>
-
-            <button id="get-lyric" style="margin-top: 20px; height: 35px; font-family: monospace; font-size: 15px; color: #3b4f3f; background-color: papayawhip" onclick="getLyric()">Get me a Lyric!</button>
-
-            <div id="display-lyric" style="margin-top: 10px; font-size: 30px; color: papayawhip; background-color: #3b4f3f; font-weight: 600; font-family: monospace; text-align: center">No Lyric Yet</div>
-
-<br><br><br>
-        </div>
-    </div>
-    </body>
-    </html>
+</div>
 {% endblock %}
