added pictures to abt me

--- a/templates/KianAboutMe.html
+++ b/templates/KianAboutMe.html
@@ -27,13 +27,13 @@
         <div class="w3-half">
             <img src="/static/assets/la_pond.jpg" style="width:100%">
             <img src="/static/assets/plane.png" style="width:100%">
-            <img src="/static/assets/jungle.jpg" style="width:100%">
 
         </div>
 
         <div class="w3-half">
-            <img src="/w3images/streetart4.jpg" style="width:100%">
-            <img src="/w3images/streetart4.jpg" style="width:100%">
+            <img src="/static/assets/jungle.jpg" style="width:100%">
+            <img src="/static/assets/Kian_food.jpg" style="width:100%">
+
         </div>
     </div>
 
