put the plane ticket in the right spot

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 <h1 id=mainheader> Expeditions </h1>
 
 <img id="travelmainpic"src="/static/travelmainpic.png" height="800" width="1100">
+<img id="planeticket"src="/static/planeticket.png" height="800" width="300">
 
 
 
@@ -32,6 +33,13 @@
         left: 315px;
         bottom: 4%;
     }
+    #planeticket {
+        padding-top: 120px;
+        position: absolute;
+        left: 1000px;
+        top:700px ;
+        filter: blur(6px);
+    }
 
 
     #container {
@@ -42,8 +50,8 @@
         padding-top:200px;
         position:relative;
         width:100%;
-        top:40%;
-        left:20%;
+        top:8%;
+        left:19%;
         align-self: center;
 
     }
