added the mission statement

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,10 @@
 <img id="travelmainpic"src="/static/travelmainpic.png" height="800" width="1100">
 <img id="planeticket"src="/static/planeticket.png" height="800" width="300">
 
-
+<p id="paragraph"> This is travel website that makes travel simple <br> and efficient for all. We have provided <br>
+    many features such as<br>tabs for people that are <br> on vacation that organize the person's stay<br> and
+    to guide them to do what <br>they want to do at certain times.<br> Also, we have functions to show <br>restaurants
+    nearby, a form of an<br> itinerary, places to go, and Hotels near their locations<br>.
 
 <div id=container>
     Travel
