--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <img id="travelmainpic"src="/static/travelmainpic.png" height="800" width="1100">
 <img id="planeticket"src="/static/planeticket.png" height="800" width="300">
 
-<p id="paragraph"> This is travel website that makes travel simple <br> and efficient for all. We have provided <br>
+<p id="paragraph"> This is travel website that<br> makes travel simple  and efficient<br> for all. We have provided <br>
     many features such as<br>tabs for people that are <br> on vacation that organize the person's stay<br> and
     to guide them to do what <br>they want to do at certain times.<br> Also, we have functions to show <br>restaurants
     nearby, a form of an<br> itinerary, places to go, and Hotels near their locations<br>.
@@ -57,6 +57,20 @@
         left:19%;
         align-self: center;
 
+    }
+    #paragraph {
+        padding-top: 150px;
+        padding-bottom: 150px;
+        position: absolute;
+        left: 10%;
+        top: 100%;
+        text-align: center;
+        font-size: 20px;
+        color: black;
+        width: 800px;
+        height: 600px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     #flip {
