--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,9 @@
 <img id="planeticket"src="/static/planeticket.png" height="800" width="300">
 
 <p id="paragraph"> This is travel website that<br> makes travel simple  and efficient<br> for all. We have provided <br>
-    many features such as<br>tabs for people that are <br> on vacation that organize the person's stay<br> and
+    many features such as<br>tabs for people that are <br> on vacation that organize<br> the person's stay<br> and
     to guide them to do what <br>they want to do at certain times.<br> Also, we have functions to show <br>restaurants
-    nearby, a form of an<br> itinerary, places to go, and Hotels near their locations<br>.
+    nearby, a form of an<br> itinerary, places to go,<br> and Hotels near their locations<br>.
 
 <div id=container>
     Travel
