--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
         padding-top: 150px;
         padding-bottom: 150px;
         position: absolute;
-        left: 10%;
+        left: %;
         top: 100%;
         text-align: center;
         font-size: 20px;
@@ -70,6 +70,8 @@
         width: 800px;
         height: 600px;
         margin-left: auto;
+        font-family: "Times New Roman";
+        font-size: 18px;
         margin-right: auto;
     }
 
