--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
 
 {% block body %}
 
-<h1 id=mainheader> Expeditions </h1>
+<h1 id="mainheader"> Expeditions </h1>
+<h1 id="missionstatement"> Mis<br>sion<br>Sta<br>tem<br>ent </h1>
 
 <img id="travelmainpic"src="/static/travelmainpic.png" height="800" width="1100">
 <img id="planeticket"src="/static/planeticket.png" height="800" width="300">
@@ -41,7 +42,8 @@
         position: absolute;
         left: 1000px;
         top:700px ;
-        filter: blur(6px);
+        filter: blur(5px);
+        opacity: 0.35;
     }
 
 
@@ -62,16 +64,16 @@
         padding-top: 150px;
         padding-bottom: 150px;
         position: absolute;
-        left: %;
-        top: 100%;
+        left: 44%;
+        top: 77%;
         text-align: center;
-        font-size: 20px;
         color: black;
         width: 800px;
         height: 600px;
         margin-left: auto;
         font-family: "Times New Roman";
-        font-size: 18px;
+        font-weight: bolder;
+        font-size: 20px;
         margin-right: auto;
     }
 
@@ -170,6 +172,17 @@
         selfalign: center;
         left: 450px;
         font-family: "Vibur";
+    }
+    #missionstatement {
+        position: absolute;
+        top: 95%;
+        font-size:85px;
+        padding-top: 130px;
+        selfalign: center;
+        right: 80px;
+        color:black;
+        font-family: "Times New Roman";
+        Font-weight:bold;
     }
 
     html, body {
