--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -82,7 +82,9 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             </ul>
 
             <a class="nav-link" href="/flashcards/">Flash Cards <div class="nav-border"></div></a>
-            <a class="nav-link" href="/notes">Notes                         <div class="nav-border"></div></a>
+            <a class="nav-link" href="/crud">Database <div class="nav-border"></div></a>
+            <a class="nav-link" href="/crud/search">Searchbar <div class="nav-border"></div></a>
+            <a class="nav-link" href="/notes">AP Notes <div class="nav-border"></div> </a>
         </div>
     </div>
   
