--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -87,6 +87,8 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href="/notes">AP Notes <div class="nav-border"></div> </a>
         </div>
     </div>
+
+
   
     <style>
         nav {
@@ -94,7 +96,61 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             background-color: #ceb680;
         }
     </style>
-  
+
+    <div class="mb-3">
+        <div class="form-group">
+            <input type="text" class="form-control" id="term" placeholder="enter search term">
+            <label></label> <!-- used for spacer -->
+        </div>
+        <button class="btn btn-primary bg-secondary" onclick="search_data();">Search</button>
+    </div>
+    <script>
+        function search_data() {
+            // fetch standard requires data set to a name-value pair
+            const term = document.getElementById("term");
+            const body = {
+                term: term.value
+            };
+
+            // fetch call with header options
+            fetch('/templates/layouts/term/', {
+                method: "POST",
+                credentials: "include",
+                body: JSON.stringify(body),
+                cache: "no-cache",
+                headers: new Headers({
+                    "content-type": "application/json"
+                })
+            })
+                // async then replies with response header
+                .then(function (response) {
+                    // prepare HTML search result container for new output
+                    const resultContainer = document.getElementById("result");
+                    // clean up from previous search
+                    while (resultContainer.firstChild) {
+                        resultContainer.removeChild(resultContainer.firstChild);
+                    }
+                    // trap error response from Web API
+                    if (response.status !== 200) {
+                        const errorMsg = 'Database response error: ' + response.status;
+                        console.log(errorMsg);
+                        const div = document.createElement("div");
+                        div.innerHTML = errorMsg;
+                        resultContainer.appendChild(div);
+                        return;
+                    }
+                    // response contains valid result
+                    response.json().then(function(data) {
+                        // loop through JSON and build HTML output
+                        for (let i = 0; i < data.length; i++) {
+                            const div = document.createElement("div");
+                            div.innerHTML = data[i].name + ' ' + data[i].email;
+                            resultContainer.appendChild(div);
+                        }
+                    })
+                })
+        }
+    </script>
     <!--Clock thing-->
     <div style="color:var(--txt);" class="btn-group">
         <!-- Clock display -->
@@ -102,6 +158,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <span id="clock">12/2/2021, 2:45:33 PM</span>
         </div>
     </div>
+
 
 
     <script>
