navbar search works

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -104,6 +104,10 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
         </div>
         <button class="btn btn-primary bg-secondary" onclick="search_data();">Search</button>
     </div>
+    <div class="container">
+        <div class="row" id="result">
+        </div>
+    </div>
     <script>
         function search_data() {
             // fetch standard requires data set to a name-value pair
