--- a/templates/flashcards.html
+++ b/templates/flashcards.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Flashcards</title>
+  <title class="cardtitle" > Flashcards</title>
 </head>
 {% block body %}
 <script>
@@ -75,21 +75,34 @@
     }
 
     .flashcard-front {
-       background-color: var(--main-color);
-       color: var(--secondary-color);
+       background-color: var(--cardbg);
+       color: black;
     }
     .flashcard-back {
-      background-color: var(--secondary-color);
+      background-color: var(--cardbg);
       color: var(--main-color);
       transform: rotateX(180deg);
     }
     h2 {
         text-transform: uppercase;
         font-size: 50px;
+        font-family: "Times", serif;
+        color: var(--txt)
+
     }
+
+    .cardtitle h2 {
+        text-transform: uppercase;
+        font-size: 50px;
+        font-family: "Times", serif;
+        color: #291F1C;
+    }
+
+
     .flashcard h2 {
         font-size: 30px;
         text-transform: uppercase;
+        font-family: "Times", serif;
     }
     #flip {
         font-size: 15px;
@@ -97,9 +110,11 @@
     .warning {
         color: red;
         font-size: 25px;
+        font-family: "Times", serif;
     }
     .answer {
         display: none;
+        font-family: "Times", serif;
     }
 </style>
 <div class="page-container">
