--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -28,6 +28,12 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
     <style>
 
+
+        *{
+            font-family: "Times", serif;
+
+        }
+
         /* for light mode */
         html{
             --txt: #000000;
@@ -41,6 +47,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --visitlink:#fed2b9;
             --navbarbg: #fed2b9;
             --simonbg: #b76b52;
+            --cardbg: #64483f;
+            --backcardbg: #FED2B9;
+            --cardtxt: #FED2B9;
 
         }
 
@@ -57,6 +66,9 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --visitlink:#c5bebd;
             --navbarbg: #3b2d29;
             --simonbg: #291F1C;
+            --cardbg: #463530;
+            --backcardbg: #65453e;
+            --cardtxt:#6a6260;
         }
 
         html, body{
