polishing the flashcard page

--- a/templates/flashcards.html
+++ b/templates/flashcards.html
@@ -79,7 +79,7 @@
        color: black;
     }
     .flashcard-back {
-      background-color: var(--cardbg);
+      background-color: var(--backcardbg);
       color: var(--main-color);
       transform: rotateX(180deg);
     }
@@ -108,7 +108,7 @@
         font-size: 15px;
     }
     .warning {
-        color: red;
+        color: #af5858;
         font-size: 25px;
         font-family: "Times", serif;
     }
