--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -67,7 +67,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --navbarbg: #3b2d29;
             --simonbg: #291F1C;
             --cardbg: #463530;
-            --backcardbg: #65453e;
+            --backcardbg:#463530;
             --cardtxt:#6a6260;
         }
 
