--- a/crud/templates/crud/search.html
+++ b/crud/templates/crud/search.html
@@ -28,9 +28,9 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
             </div>
         </div>
     </div>
-    <!-- result of search -->
+    <!-- newresult of search -->
     <div class="container">
-        <div class="row" id="result">
+        <div class="row" id="newresult">
         </div>
     </div>
 
@@ -54,11 +54,11 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
             })
                 // async then replies with response header
                 .then(function (response) {
-                    // prepare HTML search result container for new output
-                    const resultContainer = document.getElementById("result");
+                    // prepare HTML search newresult container for new output
+                    const newresultContainer = document.getElementById("newresult");
                     // clean up from previous search
-                    while (resultContainer.firstChild) {
-                        resultContainer.removeChild(resultContainer.firstChild);
+                    while (newresultContainer.firstChild) {
+                        newresultContainer.removeChild(newresultContainer.firstChild);
                     }
                     // trap error response from Web API
                     if (response.status !== 200) {
@@ -66,16 +66,17 @@ inspiration from https://www.youtube.com/watch?v=QKcVjdLEX_s
                         console.log(errorMsg);
                         const div = document.createElement("div");
                         div.innerHTML = errorMsg;
-                        resultContainer.appendChild(div);
+                        newresultContainer.appendChild(div);
                         return;
                     }
-                    // response contains valid result
+                    // response contains valid newresult
                     response.json().then(function(data) {
                         // loop through JSON and build HTML output
                         for (let i = 0; i < data.length; i++) {
                             const div = document.createElement("div");
                             div.innerHTML = data[i].name + ' ' + data[i].email;
-                            resultContainer.appendChild(div);
+                            newresultContainer.appendChild(div);
+
                         }
                     })
                 })
