--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -29,11 +29,11 @@
                     About Pages
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="{{ url_for('connor') }}">Connor</a>
-                    <a class="dropdown-item" href="{{ url_for('tanay') }}">Tanay</a>
-                    <a class="dropdown-item" href="{{ url_for('colin')}}">Colin</a>
-                    <a class="dropdown-item" href="{{ url_for('pranav')}}">Pranav</a>
-                    <a class="dropdown-item" href="{{ url_for('chase')}}">Chase</a>
+                    <a class="dropdown-item" href="{{ url_for('bconnor.connor') }}">Connor</a>
+                    <a class="dropdown-item" href="{{ url_for('btanay.tanay') }}">Tanay</a>
+                    <a class="dropdown-item" href="{{ url_for('bcolin.colin')}}">Colin</a>
+                    <a class="dropdown-item" href="{{ url_for('bpranav.pranav')}}">Pranav</a>
+                    <a class="dropdown-item" href="{{ url_for('bchase.chase')}}">Chase</a>
                 </div>
             </li>
 
