added cool pic to chemistry button

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -51,6 +51,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --backcardbg: #FED2B9;
             --cardtxt: #FED2B9;
 
+
         }
 
         /* for dark mode */
@@ -176,6 +177,16 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             background-color: var(--main-color);
             font-weight: 700;
         }
+
+        /* wanna try to add pictures to note buttons */
+
+        #chemistry:hover {
+            color: var(--secondary-color);
+            background-image: url("https://images.theconversation.com/files/121885/original/image-20160510-20731-1pf8nwv.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip");
+            font-weight: 700;
+        }
+
+
 
         /*.button {
             padding: .5em 2em;
