--- a/templates/subjects/notes.html
+++ b/templates/subjects/notes.html
@@ -10,24 +10,25 @@
 
     <table>
         <tr>
-            <td>
+            <td style="padding-top: 50px;">
                 <a href='http://www.volkeeurohistory.com/lecture-notes.html'><button class="btn">APEC notes</button></a>
             </td>
-            <td>
+            <td style="padding-top: 50px;">
                 <a href='https://apnotes.net/ap-16e.html'><button class="btn">APUSH notes</button></a>
             </td>
-            <td>
+            <td style="padding-top: 50px;">
                 <button class="btn" onclick="location.href='https://www.lee.k12.al.us/site/handlers/filedownload.ashx?moduleinstanceid=10681&dataid=14889&FileName=AP%20Biology%20Combined%20Notes%202021.pdf';">AP Bio notes</button>
             </td>
+
         </tr>
         <tr>
-            <td>
+            <td style="padding-top: 50px;">
                 <button class="btn" onclick="location.href='https://arborview.enschool.org/ourpages/auto/2018/8/10/50419544/AP%20Calculus%20AB%20Notes.pdf';">AP Calc AB notes</button>
             </td>
-            <td>
-                <a href='https://blog.prepscholar.com/ap-chemistry-notes'><button class="btn">AP Chem notes</button></a>
+            <td style="padding-top: 50px;">
+                <a href='https://blog.prepscholar.com/ap-chemistry-notes'><button id="chemistry"   class="btn">AP Chem notes</button></a>
             </td>
-            <td>
+            <td style="padding-top: 50px;">
                 <button class="btn" onclick="location.href='https://1.cdn.edl.io/OfjStocj8Y1KTz9KqamsFIajcovZigo8gOlPdChUQtDnW9Lu.pdf';">AP CSP notes</button>
             </td>
         </tr>
@@ -35,7 +36,7 @@
             <td>
 
             </td>
-            <td>
+            <td style="padding-top: 50px;">
                 <button class="btn" onclick="location.href='http://www.mathguy.us/Handbooks/StatisticsHandbook.pdf';">AP Stats notes</button>
             </td>
         </tr>
