--- a/templates/subjects/notes.html
+++ b/templates/subjects/notes.html
@@ -14,10 +14,10 @@
                 <a href='http://www.volkeeurohistory.com/lecture-notes.html'><button class="btn">APEC notes</button></a>
             </td>
             <td style="padding-top: 50px;">
-                <a href='https://apnotes.net/ap-16e.html'><button class="btn">APUSH notes</button></a>
+                <a href='https://apnotes.net/ap-16e.html'><button id="history" class="btn">APUSH notes</button></a>
             </td>
             <td style="padding-top: 50px;">
-                <button class="btn" onclick="location.href='https://www.lee.k12.al.us/site/handlers/filedownload.ashx?moduleinstanceid=10681&dataid=14889&FileName=AP%20Biology%20Combined%20Notes%202021.pdf';">AP Bio notes</button>
+                <button id="bio" class="btn" onclick="location.href='https://www.lee.k12.al.us/site/handlers/filedownload.ashx?moduleinstanceid=10681&dataid=14889&FileName=AP%20Biology%20Combined%20Notes%202021.pdf';">AP Bio notes</button>
             </td>
 
         </tr>
@@ -37,7 +37,7 @@
 
             </td>
             <td style="padding-top: 50px;">
-                <button class="btn" onclick="location.href='http://www.mathguy.us/Handbooks/StatisticsHandbook.pdf';">AP Stats notes</button>
+                <button id="stats" class="btn" onclick="location.href='http://www.mathguy.us/Handbooks/StatisticsHandbook.pdf';">AP Stats notes</button>
             </td>
         </tr>
     </table>
