--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -80,6 +80,19 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     </div>
                 </li>
             </ul>
+            <ul class="navbar-nav mr-auto">
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarStarters" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Tools
+                        <div class="nav-border"></div>
+                    </a>
+
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="/final_grade_calc/">Final Grade</a>
+                    </div>
+                </li>
+            </ul>
 
             <a class="nav-link" href="/flashcards/">Flash Cards <div class="nav-border"></div></a>
             <a class="nav-link" href="/notes">Notes                         <div class="nav-border"></div></a>
