--- a/templates/final_grade_calc.html
+++ b/templates/final_grade_calc.html
@@ -31,7 +31,7 @@ function calcgrade() {
       var curr = document.getElementById("curr").value;
       var goal = document.getElementById("goal").value;
       var weight = document.getElementById("weight").value;
-      if ((! curr.value) || (! goal.value) || (! weight.value)) {
+      if ((! curr) || (! goal) || (! weight)) {
             document.getElementById("result").innerText = "Please fill out all the fields. "
       } else {
           other = (curr/100)*(100-weight);
