worked on language translator

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -16,7 +16,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             </li>
                 <a class="nav-link" href="/mainabout">World Clock<span class="sr-only">(current)</span></a>
             </li>
-                <a class="nav-link" href="/mainabout">Language Translator<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/translator">Language Translator<span class="sr-only">(current)</span></a>
             </li>
                 <a class="nav-link" href="/mainabout">Rankings<span class="sr-only">(current)</span></a>
             </li>
