--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -9,43 +9,14 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
-            <a class="nav-link" href={{ url_for('index') }}>Expeditions</a>
-            <a class="nav-link" href={{ url_for('rohan') }}>Rohan</a>
-            <a class="nav-link" href={{ url_for('adi') }}>Adi</a>
-            <a class="nav-link" href={{ url_for('jason') }}>Jason</a>
-            <a class="nav-link" href={{ url_for('divya') }}>Divya</a>
-            <a class="nav-link" href={{ url_for('brian') }}>Brian</a>
-            <a class="nav-link" href={{ url_for('photogallery') }}>Photography</a>
-            <a class="nav-link" href={{ url_for('weather') }}>Weather</a>
-            <a class="nav-link" href={{ url_for('crud.crud') }}>Crud</a>
-            <a class="nav-link" href={{ url_for('crud.search') }}>Search</a>
+            <a class="nav-link" href="index">Expeditions</a>
+            <a class="nav-link" href="rohan">Rohan</a>
+            <a class="nav-link" href="adi">Adi</a>
+            <a class="nav-link" href="jason"<Jason</a>
+            <a class="nav-link" href="divya">Divya</a>
+            <a class="nav-link" href="brian">Brian</a>
+            <a class="nav-link" href="photography">Photography</a>
+            <a class="nav-link" href="weather">Weather</a>
         </div>
-        <ul class="nav navbar-nav">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarSupportedContent" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Crud
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarSupportedContent">
-                    <a class="dropdown-menu" href={{ url_for('crud.crud') }}>Crud</a>
-                    <a class="dropdown-menu" href={{ url_for('crud.search') }}>Search</a>
-                </div>
-            </li>
-        </ul>
     </div>
-
-
-{##}
-{#    <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">#}
-{#        <ul class="navbar-nav">#}
-{#            <li class="nav-item dropdown">#}
-{#                <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">#}
-{#                    Data#}
-{#                </a>#}
-{#                <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">#}
-{#                    <li><a class="nav-link" href={{ url_for('crud.crud') }}>Crud</a></li>#}
-{#                    <li><a class="nav-link" href={{ url_for('crud.search') }}>Search</a></li>#}
-{#                </ul>#}
-{#            </li>#}
-{#        </ul>#}
-{#    </div>#}
 </nav>
