--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -12,7 +12,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href="index">Expeditions</a>
             <a class="nav-link" href="rohan">Rohan</a>
             <a class="nav-link" href="adi">Adi</a>
-            <a class="nav-link" href="jason"<Jason</a>
+            <a class="nav-link" href="jason">Jason</a>
             <a class="nav-link" href="divya">Divya</a>
             <a class="nav-link" href="brian">Brian</a>
             <a class="nav-link" href="photography">Photography</a>
