--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -25,7 +25,10 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                 <a class="nav-link" href="/mainabout">Mini Labs<span class="sr-only">(current)</span></a>
             </li>
                 <a class="nav-link" href="/feedback">Give Us Feedback!<span class="sr-only">(current)</span></a>
-                </div>
+            </li>
+                <a class="nav-link" href="/search">Search<span class="sr-only">(current)</span></a>
+            </li>
+                <a class="nav-link" href="/crud">Crud<span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
