Added background images to the buttons on note page

--- a/templates/subjects/notes.html
+++ b/templates/subjects/notes.html
@@ -73,10 +73,17 @@
     font-size: 250px;color: #16100F "> Study </h2>
 
 <style>
+
+    @keyframes camp {
+        from {Opacity:0%}
+        to {Opacity:100%}
+    }
+
     .camp:hover{
     position:relative;left: 52%;
         font-size: 250px;color:#16100F;
         opacity: 100%;
+        animation-name: camp;
     }
 
     .camp{
