Finished up Evan.html

--- a/templates/about_us/evan.html
+++ b/templates/about_us/evan.html
@@ -52,7 +52,7 @@
 
     <hr>
 
-        <div style="background-color:#64483F; border-radius:50px; height:180px; width:500px; margin-left:50%">
+        <div style="background-color:#856159; border-radius:50px; height:180px; width:500px; margin-left:50%">
                 <h1 style="font-size:50px">Geolocation API</h1>
                 <button class="btn" id = "find-me">Show my location</button><br/>
                 <p id = "status"></p>
